--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,4 @@
 {
-    "extends": "airbnb-base",
-    "plugins": [
-        "import"
-    ]
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["import", "prettier"]
 }
