--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "spotify-wrapper",
   "version": "1.0.0",
   "description": "A Wrapperto work with the Spotify Web API.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "clear": "rimraf lib",
-    "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
+    "build": "./node_modules/.bin/babel --out-dir lib src",
     "build:watch": "npm run build -- --watch",
+    "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
+    "build:umd:min": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.min.js -p",
+    "build:all": "npm run build && npm run build:umd && npm run build:umd:min",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.test.js --require babel-register",
@@ -35,6 +38,8 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
@@ -44,13 +49,14 @@
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "sinon": "^6.1.3",
+    "sinon-chai": "^3.2.0",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
-    "babel-loader": "^7.1.5",
-    "node-fetch": "^2.1.2",
-    "sinon": "^4.5.0",
-    "sinon-chai": "^3.2.0",
-    "sinon-stub-promise": "^4.0.0"
+    "eslint-config-prettier": "^2.9.0",
+    "node-fetch": "^2.1.2"
   }
 }
