--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:umd:min": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.min.js -p",
     "build:all": "npm run build && npm run build:umd && npm run build:umd:min",
     "lint": "./node_modules/.bin/eslint src/*.js",
-    "prepush": "npm run lint",
+    //"prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.test.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.test.js --require babel-register --watch",
     "test:coverage": "nyc npm test",
