--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "js-tdd-course",
+  "name": "btc-converter",
   "version": "1.0.0",
-  "description": "Nossa biblioteca do curso de JS com TDD na prática.",
+  "description": "A CLI to convert bitcoin to any currency provided.",
   "main": "index.js",
   "scripts": {
-    "clear": "rimraf lib",
-    "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
+    "build": "./node_modules/.bin/babel --out-dir bin src",
     "build:watch": "npm run build -- --watch",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
-    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require babel-polyfill --reporter nyan",
+    "test:tdd": "npm run test -- --watch",
     "test:coverage": "nyc npm test"
+  },
+  "preferGlobal": true,
+  "bin": {
+    "btc-converter": "bin/main.js"
   },
   "nyc": {
     "reporter": [
@@ -43,7 +46,17 @@
     "eslint-plugin-import": "^2.6.1",
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
+    "nock": "^9.6.1",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
+    "polyfill": "^0.1.0",
+    "rimraf": "^2.6.1",
+    "sinon": "^6.1.5",
+    "sinon-chai": "^3.2.0"
+  },
+  "dependencies": {
+    "commander": "^2.17.1",
+    "ora": "^3.0.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   }
 }
